--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -3,8 +3,8 @@
     x:Class="FastCost.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:views="clr-namespace:FastCost.Views">
-    <!-- FlyoutBehavior=""> -->
+    xmlns:views="clr-namespace:FastCost.Views"
+    FlyoutBehavior="Flyout">
 
     <!-- <ShellContent -->
     <!--     Title="FastCost" -->
