--- a/Views/CostPage.xaml
+++ b/Views/CostPage.xaml
@@ -24,20 +24,22 @@
         <!-- // test -->
 
         <Editor x:Name="CostValueEditor"
-                Placeholder="Enter cost value"
+                Placeholder="enter cost value"
                 Text="{Binding Value}"
-                FontSize="28" 
-                FontAttributes="Bold"  
-                HorizontalTextAlignment="Center"/>
+                FontSize="26" 
+                FontAttributes="Bold"
+                HorizontalTextAlignment="Center" />
 
         <Editor x:Name="DescriptionEditor"
-                Placeholder="Enter cost description"
+                Placeholder="enter description"
                 Text="{Binding Description}"
-                FontSize="20"
-                HeightRequest="80" />
+                FontSize="26"
+                FontAttributes="Bold"
+                HorizontalTextAlignment="Center" />
 
-        <Grid ColumnDefinitions="*,*" ColumnSpacing="4">
-            <Button Text="Save"
+        <Grid ColumnDefinitions="*,*" ColumnSpacing="10" Margin="5">
+            <Button Grid.Column="0"
+                    Text="Save"
                     Clicked="SaveButton_Clicked" />
 
             <Button Grid.Column="1"
@@ -45,7 +47,7 @@
                     Clicked="DeleteButton_Clicked" />
         </Grid>
 
-        <Label Text="Select category level 1:" FontSize="28" Padding="15" HorizontalTextAlignment="Center" />
+        <Label Text="Select category:" FontSize="28" Padding="0" Margin="10" />
 
         <Grid  RowSpacing="5" ColumnSpacing="10" Padding="5">
             <Grid.RowDefinitions>
