--- a/Views/CostPage.xaml
+++ b/Views/CostPage.xaml
@@ -108,15 +108,15 @@
             <Label x:Name="LblTextCatC2R3" Text="company" FontAttributes="Bold" Grid.Column="2" Grid.Row="3" />
             <Label x:Name="LblTextCatC3R3" Text="other" FontAttributes="Bold" Grid.Column="3" Grid.Row="3" />
 
-            <Label x:Name="LblCatC0R4" Text="🌅" FontSize="68" Grid.Column="0" Grid.Row="4" />
-            <Label x:Name="LblCatC1R4" Text="☀️" FontSize="68" Grid.Column="1" Grid.Row="4" />
-            <Label x:Name="LblCatC2R4" Text="🌇" FontSize="68" Grid.Column="2" Grid.Row="4" />
-            <Label x:Name="LblCatC3R4" Text="💳" FontSize="68" Grid.Column="3" Grid.Row="4" />
-
-            <Label x:Name="LblTextCatC0R5" Text="CatC0R5" FontAttributes="Bold" Grid.Column="0" Grid.Row="5" />
-            <Label x:Name="LblTextCatC1R5" Text="CatC1R5" FontAttributes="Bold" Grid.Column="1" Grid.Row="5" />
-            <Label x:Name="LblTextCatC2R5" Text="CatC2R5" FontAttributes="Bold" Grid.Column="2" Grid.Row="5" />
-            <Label x:Name="LblTextCatC3R5" Text="CatC3R5" FontAttributes="Bold" Grid.Column="3" Grid.Row="5" />
+            <!-- <Label x:Name="LblCatC0R4" Text="🌅" FontSize="68" Grid.Column="0" Grid.Row="4" /> -->
+            <!-- <Label x:Name="LblCatC1R4" Text="☀️" FontSize="68" Grid.Column="1" Grid.Row="4" /> -->
+            <!-- <Label x:Name="LblCatC2R4" Text="🌇" FontSize="68" Grid.Column="2" Grid.Row="4" /> -->
+            <!-- <Label x:Name="LblCatC3R4" Text="💳" FontSize="68" Grid.Column="3" Grid.Row="4" /> -->
+            <!-- -->
+            <!-- <Label x:Name="LblTextCatC0R5" Text="CatC0R5" FontAttributes="Bold" Grid.Column="0" Grid.Row="5" /> -->
+            <!-- <Label x:Name="LblTextCatC1R5" Text="CatC1R5" FontAttributes="Bold" Grid.Column="1" Grid.Row="5" /> -->
+            <!-- <Label x:Name="LblTextCatC2R5" Text="CatC2R5" FontAttributes="Bold" Grid.Column="2" Grid.Row="5" /> -->
+            <!-- <Label x:Name="LblTextCatC3R5" Text="CatC3R5" FontAttributes="Bold" Grid.Column="3" Grid.Row="5" /> -->
         </Grid>
     </VerticalStackLayout>
 </ContentPage>
