Add GetSum function

--- a/Views/AllCostsPage.xaml
+++ b/Views/AllCostsPage.xaml
@@ -59,5 +59,10 @@
             </DataTemplate>
         </CollectionView.ItemTemplate>
 
+        <CollectionView.Footer >
+            <Label x:Name = "SumText" FontSize="16" HorizontalTextAlignment="End"/>
+        </CollectionView.Footer>
     </CollectionView>
+
+
 </ContentPage>
