Add VerticalStackLayout to AllCostsPage

--- a/Views/AllCostsPage.xaml
+++ b/Views/AllCostsPage.xaml
@@ -63,6 +63,5 @@
             <Label x:Name = "SumText" FontSize="16" HorizontalTextAlignment="End"/>
         </CollectionView.Footer>
     </CollectionView>
-
-
+    </VerticalStackLayout>
 </ContentPage>
